--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -1,4 +1,9 @@
-<img ng-src="{{mainImageUrl}}" class="phone">
+<div class="phone-images">
+  <img ng-src="{{img}}"
+       class="phone"
+       ng-repeat="img in phone.images"
+       ng-class="{active: mainImageUrl==img}">
+</div>
 
 <h1>{{phone.name}}</h1>
 
@@ -111,4 +116,3 @@
     <dd>{{phone.additionalFeatures}}</dd>
   </li>
 </ul>
-<button ng-click="hello('Me')">Hello</button>
